# ObjectGL

./: CMakeLists.txt
cmake/: FindGLFW.cmake  Findglad.cmake
src/: glad.c  objectgl.h  test.cpp
src/buffer/: frame_buffer.cpp  frame_buffer.h
src/device/: monitor.cpp  monitor.h
src/texture/: image_texture.cpp  image_texture.h  texture.cpp  texture.h
src/window/: window.cpp  window.h
